# you-get-an-a

./: CMakeLists.txt  README.md  main.cpp
src/: assignment.cpp  assignment.hpp  gradebook.cpp  gradebook.hpp  student.cpp  student.hpp
tests/: assignment_test.cpp  gradebook_test.cpp  student_test.cpp
